// Copyright Â© 2023 OpenIM. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
option go_package = "Open_IM/pkg/proto/conversation;conversation";
package conversation;

message CommonResp{
  int32  errCode = 1;
  string errMsg = 2;
}
message Conversation{
  string ownerUserID = 1;
  string conversationID = 2;
  int32 recvMsgOpt = 3;
  int32 conversationType = 4;
  string userID = 5;
  string groupID = 6;
  int32 unreadCount = 7;
  int64 draftTextTime = 8;
  bool isPinned = 9;
  string attachedInfo = 10;
  bool isPrivateChat = 11;
  int32 groupAtType = 12;
  bool isNotInGroup = 13;
  string ex = 14;
  int64  updateUnreadCountTime = 15;
  int32 burnDuration = 16;

}
message ModifyConversationFieldReq{
  Conversation conversation = 1;
  int32 fieldType = 2;
  repeated string userIDList = 3;
  string operationID = 4;
}

message ModifyConversationFieldResp{
  CommonResp  commonResp = 1;
}
service conversation {
  rpc ModifyConversationField(ModifyConversationFieldReq)returns(ModifyConversationFieldResp);

}
