// Copyright Â© 2023 OpenIM. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
import "Open-IM-Server/pkg/proto/sdk_ws/ws.proto";
option go_package = "Open_IM/pkg/proto/push;pbPush";
package push;

message PushMsgReq {
  string operationID = 1;
  server_api_params.MsgData msgData = 2;
  string pushToUserID = 3;
}
message PushMsgResp{
  int32   ResultCode = 1;
}
message DelUserPushTokenReq{
  string  operationID = 1;
  string userID =2;
  int32 platformID = 3;
}
message DelUserPushTokenResp{
  int32  errCode = 1;
  string errMsg = 2;
}

//message InternalPushMsgReq{
//  int32 ReqIdentifier = 1;
//  string Token = 2;
//  string SendID = 3;
//  string OperationID = 4;
//  int32 MsgIncr = 5;
//  int32 PlatformID = 6;
//  int32 SessionType = 7;
//  int32 MsgFrom = 8;
//  int32 ContentType = 9;
//  string RecvID = 10;
//  repeated string ForceList = 11;
//  string Content = 12;
//  string Options = 13;
//  string ClientMsgID = 14;
//  string OffLineInfo = 15;
//  string Ex = 16;
//
//}

service PushMsgService {
  rpc PushMsg(PushMsgReq) returns(PushMsgResp);
  rpc DelUserPushToken(DelUserPushTokenReq) returns(DelUserPushTokenResp);
//  rpc InternalPushMsg(InternalPushMsgReq)returns(PushMsgResp);
}

